<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:fillViewport="true"
            android:background="@drawable/moreblurrr"
            android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/text_ganeshji"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/devlys_thin"
                android:layout_below="@+id/ganeshji"
                android:layout_marginTop="15dp"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:text="@string/shri_ganeshaya_namah"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/text_mangal_1"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/devlys_thin"
                android:layout_below="@+id/text_ganeshji"
                android:layout_marginTop="6dp"
                android:visibility="gone"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:text="@string/sarwa_mangal_slok"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/text_mangal_2"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/devlys_thin"
                android:layout_below="@+id/text_mangal_1"
                android:textStyle="italic"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:text="@string/sarwa_mangal_slok_part_second"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/one"
                android:text="@string/timing"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/text_mangal_2"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"/>


        <TextView
                android:id="@+id/two"
                android:text="@string/program_1"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="normal"
                android:gravity="center_horizontal"
                android:layout_below="@+id/one"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

        <TextView
                android:id="@+id/three"
                android:text="@string/program_2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="normal"
                android:gravity="center_horizontal"
                android:layout_below="@+id/two"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

        <TextView
                android:id="@+id/four"
                android:text="@string/program_3"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="normal"
                android:gravity="center_horizontal"
                android:layout_below="@+id/three"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

        <TextView
                android:id="@+id/second_day_timing"
                android:text="@string/timing_second_day"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/four"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/five"
                android:text="@string/program_4"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="normal"
                android:gravity="center_horizontal"
                android:layout_below="@+id/second_day_timing"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"
                android:singleLine="true"/>


        <TextView
                android:id="@+id/six"
                android:text="@string/doli_chow_mein"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:gravity="center_horizontal"
                android:layout_marginEnd="20dp"
                android:textStyle="normal"
                android:layout_below="@+id/five"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        <TextView
                android:id="@+id/seven"
                android:text="@string/note"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:gravity="center_horizontal"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:layout_below="@+id/six"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        <TextView
                android:id="@+id/eight"
                android:text="@string/departure_of_barat"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:textStyle="normal"
                android:layout_below="@+id/seven"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/nine"
                android:text="@string/land_mark"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:textStyle="normal"
                android:layout_below="@+id/eight"
                android:fontFamily="@font/cherry_swash"
                android:layout_height="wrap_content"/>

        <ImageView
                android:id="@+id/imgMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/board"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/nine"
                android:layout_centerHorizontal="true"
        />

    </RelativeLayout>
</ScrollView>