<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:background="@drawable/back3"
            android:layout_height="match_parent">



    <RelativeLayout android:layout_width="match_parent"
                    android:background="#40FFFFFF"
                    android:layout_height="match_parent">

        <!--<ImageView android:id="@+id/image1"
                   android:src="@drawable/barratiiiiiis"
                   android:scaleType="centerCrop"
                   android:layout_width="281dp"
                   android:layout_marginTop="15dp"
                   android:layout_alignParentBottom="true"
                   android:layout_centerHorizontal="true"
                   android:layout_height="80dp"/>-->

        <LinearLayout android:id="@+id/text_content_layout"
                      android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:layout_height="match_parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/design"
                    android:rotation="180"
                    android:layout_marginTop="-10dp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="80dp"
                    android:src="@drawable/shubhganeshji"
                    android:layout_marginTop="-10dp"
                    android:layout_height="80dp"/>

            <TextView
                    android:id="@+id/request_line"
                    android:text="@string/request_line"
                    android:textSize="20sp"
                    android:textColor="@color/highligth_color_dim"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/wedding_ceremony_line"
                    android:text="@string/wedding_ceremony"
                    android:textSize="29sp"
                    android:textColor="@color/dim_pink"
                    android:layout_width="match_parent"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/adine"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>


            <TextView
                    android:id="@+id/name_groom"
                    android:layout_width="wrap_content"
                    android:text="@string/groom_name"
                    android:textColor="@color/highlight_color"
                    android:textSize="36sp"
                    android:layout_marginTop="22dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/samarkan_normal"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/son_line"
                    android:text="@string/of_son"
                    android:textSize="25sp"
                    android:textColor="@color/highligth_color_dim"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/adine"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:layout_height="wrap_content"/>


            <TextView
                    android:id="@+id/hostline"
                    android:text="@string/host_line"
                    android:textSize="20sp"
                    android:textColor="@color/highlight_color"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/samarkan_normal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content" android:textStyle="bold"/>

            <TextView
                    android:id="@+id/txt_weds"
                    android:layout_width="wrap_content"
                    android:text="@string/with"
                    android:textColor="@color/highligth_color_dim"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/samarkan_normal"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/name_bride"
                    android:layout_width="wrap_content"
                    android:text="@string/bride_name"
                    android:layout_below="@+id/txt_weds"
                    android:textSize="36sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/samarkan_normal"
                    android:textColor="@color/highlight_color"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/parents_line"
                    android:text="@string/parents_line"
                    android:gravity="center_horizontal"
                    android:textSize="28sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/highligth_color_dim"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/adine"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/hostline1"
                    android:text="@string/host_line1"
                    android:textSize="20sp"
                    android:textColor="@color/highlight_color"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/samarkan_normal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/info_line"
                    android:text="@string/info_line"
                    android:textSize="32sp"
                    android:textColor="@color/highligth_color_dim"
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/adine"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/design"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>