<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/back"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


        <ImageView
                android:id="@+id/ganeshji"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ganessh" />

        <TextView
                android:id="@+id/text_ganeshji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ganeshji"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/devlys_thin"
                android:text="@string/om_ganeshaya_namah"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="italic" />


        <TextView
                android:id="@+id/text_wakra_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_ganeshji"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/devlys_thin"
                android:text="@string/wakra_tund_shlok"
                android:textColor="@color/red"
                android:textSize="17sp"
                android:textStyle="italic" />

        <TextView
                android:id="@+id/text_wakra_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_wakra_1"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/devlys_thin"
                android:text="@string/wakra_tund_part_second"
                android:textColor="@color/red"
                android:textSize="17sp"
                android:textStyle="italic" />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_wakra_2"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/samarkan_normal"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="36sp" />

    </RelativeLayout>

</RelativeLayout>